# NegBioDB

./: .gitignore  LICENSE  Makefile  NEGBIORL_PHASE6_HANDOFF_2026-04-15.md  NeurIPS_DB_Track_Research.md  PATCH_NOTES_2026-03-10.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  config.yaml  experiment_results.md  pyproject.toml
docs/: appendix_prompts.md  methodology_notes.md
migrations/: 001_initial_schema.sql  002_target_variants.sql
migrations_cp/: 001_cp_initial_schema.sql
migrations_ct/: 001_ct_initial_schema.sql  002_schema_fixes.sql
migrations_dc/: 001_dc_initial_schema.sql
migrations_depmap/: 001_ge_initial_schema.sql
migrations_graph/: 001_graph_initial_schema.sql
migrations_md/: 001_md_initial_schema.sql
migrations_ppi/: 001_ppi_initial_schema.sql  002_llm_annotations.sql
migrations_vp/: 001_vp_initial_schema.sql
paper/: checklist.tex  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
research/: 01_dti_negative_data_landscape.md  02_benchmark_analysis.md  03_data_collection_methodology.md  04_publication_commercial_strategy.md  05_technical_deep_dive.md  06_paper_narrative.md  07a_llm_benchmark_landscape_survey.md  07b_llm_benchmark_design.md  08_expert_review_and_feasibility.md  09_schema_and_ml_export_design.md  10_expert_panel_review.md  11_full_plan_review.md  12_review_findings_summary.md  13_clinical_trial_failure_domain.md  14_ct_ml_benchmark_design.md  15_ct_llm_benchmark_design.md  16_ppi_llm_benchmark_design.md  17_ct_expert_panel_review.md  17_ppi_expert_panel_review.md  18_future_directions_and_extensions.md  19_ge_depmap_domain_design.md
scripts/: analyze_l4_contamination.py  build_compound_names.py  build_l1_dataset.py  build_l2_dataset.py  build_l3_dataset.py  build_l4_dataset.py  collect_llm_results.py  collect_results.py  compute_judge_agreement.py  download_bindingdb.py  download_chembl.py  download_davis.py  download_pubchem.py  eval_checkpoint.py  export_depmap_gene_aggregates.py  export_ml_dataset.py  (+16 more)
(+530 files in other folders)
