[project]
name = "negbiodb"
version = "0.1.0"
description = "Negative Results Database for Drug-Target Interactions"
license = {text = "CC-BY-SA-4.0"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "tqdm>=4.60",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "requests>=2.28",
    "rdkit>=2024.3",
    "chembl-downloader>=0.4",
    "mlcroissant>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/negbiodb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: marks tests requiring network access (deselect with '-m \"not integration\"')"]
